--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,3 +1,6 @@
 - sitename: GitHub
   name: LeonhardE
   url: https://github.com/LeonhardE
+- sitename: email
+  name: zxx9808181@163.com
+  url: zxx9808181@163.com
