--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ side_bar_repo_limit: 5
 # ---------------- #
 #      Author      #
 # ---------------- #
-author: 
+author: 曾宪欣
 organization: 
 organization_url: 
 github_username: LeonhardE
