--- a/_data/social.yml
+++ b/_data/social.yml
@@ -3,4 +3,4 @@
   url: https://github.com/LeonhardE
 - sitename: email
   name: zxx9808181@163.com
-  url: www.mail.163.com
+  url: https://www.mail.163.com
